[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/used Gun - Bullet/gh55b.png" type="Texture" id=1]
[ext_resource path="res://script/GunPivot.gd" type="Script" id=2]

[node name="GunPivot" type="Position2D"]
script = ExtResource( 2 )
speed = 80
bullet_speed = 300

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 0, 0.998565 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 1 )

[node name="GunPoint" type="Node2D" parent="Gun"]
position = Vector2( 8.02671, -1.37804 )
scale = Vector2( 2, 2 )

[node name="enemyDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyDetection"]

[connection signal="body_entered" from="enemyDetection" to="." method="_on_enemyDetection_body_entered"]
[connection signal="body_exited" from="enemyDetection" to="." method="_on_enemyDetection_body_exited"]
